[package]
name = "from-pg-fit-row"
version = "0.1.0"
edition = "2021"
description = "Extract a struct from a `tokio-postgres` Row that fits correctly"
authors = ["Nicolas Guiard <nicolas.nguiard@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from-pg-fit-row-impl = { version = "0.1.0", path = "impl" }
tokio-postgres = { version = "0.7.10", default-features = false }
